# EMIKeyboardConfigurator

./: .npmrc  README.md  components.d.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: main.yml
emi-keyboard-controller/: README.md  README.zh-CN.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
emi-keyboard-controller/src/: index.ts  interface.ts  vite-env.d.ts
emi-keyboard-controller/test/: libamp_keyboard_controller.state.test.ts  libamp_keyboard_controller.transport.test.ts  libamp_keyboard_controller.workflows.test.ts  setup.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/controllers/ansi_104_sample_controller/: Cargo.toml
src-tauri/controllers/ansi_104_sample_controller/src/: lib.rs
src-tauri/controllers/oholeo_keyboard_controller/: Cargo.toml
src-tauri/controllers/oholeo_keyboard_controller/src/: lib.rs  oholeo-keyboard-layout.json
src-tauri/controllers/trinity_keypad_controller/: Cargo.toml
src-tauri/controllers/trinity_keypad_controller/src/: lib.rs  trinity-keypad-layout.json
src-tauri/controllers/zellia_80_controller/: Cargo.toml
src-tauri/controllers/zellia_80_controller/src/: lib.rs  zellia-80-layout.json
src-tauri/keyboard_controller/: Cargo.toml
src-tauri/keyboard_controller/src/: advancedkey.rs  lib.rs  rgb.rs
src-tauri/src/: lib.rs  main.rs
src/apis/: api.ts  interface.ts  old_api.ts  utils.ts
src/components/: AboutPanel.vue  ActiveKeysMonitor.vue  Application.vue  DebugPanel.vue  DynamicKeyModTapPanel.vue  DynamicKeyMutexPanel.vue  DynamicKeyPanel.vue  DynamicKeyStrokePanel.vue  DynamicKeyToggleKeyPanel.vue  HexViewer.vue  Key.vue  (+24 more)
(+52 files in other folders)
