[package]
name = "emikeyboardconfigurator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "emikeyboardconfigurator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.1", features = ["full"] }
keyboard_controller = { path = "./keyboard_controller" }
trinity_keypad_controller = { path = "./controllers/trinity_keypad_controller" }
oholeo_keyboard_controller = { path = "./controllers/oholeo_keyboard_controller" }
zellia_80_controller = { path = "./controllers/zellia_80_controller" }
ansi_104_sample_controller = { path = "./controllers/ansi_104_sample_controller" }

