[package]
name = "oholeo_keyboard_controller"
version = "0.1.0"
edition = "2021"

[dependencies]
keyboard_controller = { path = "./../../keyboard_controller" }
hidapi = "2.6.3"
log = "0.4"
env_logger = "0.11.5"
serde = { version = "1.0.215", features = ["derive"] }
palette = { version = "0.7.6", features = ["serializing"] }
serde_with = "3.11.0"